Fixes spacing after labels on Steps page (#1733)

--- a/js/styles/shared/steps.less
+++ b/js/styles/shared/steps.less
@@ -29,3 +29,7 @@
 // .style-demo {
 //   .generate-bg-classes(@color-palette);
 // }
+
+.starting .btn, .exit .btn {
+  margin-left: 10px;
+}
